# Feature Release steps

 - tests passing
 - mix format
 - inline documentation
 - top of module documentation
 - version bump in mix.exs
 - version bump in README.md
 - version bump in CHANGELOG
 - update OEIS stats for release version
 - git tag -a v0.x.x -m "v0.x.x - summary"
 - git push
 - git push --tags
 - mix hex.publish

# CHANGELOG

## v0.10.0

```
OEIS Coverage
        144 total sequences
By Module
        Elixir.Chunky.Sequence.OEIS - 3 sequences
        Elixir.Chunky.Sequence.OEIS.Core - 24 sequences
        Elixir.Chunky.Sequence.OEIS.Factors - 96 sequences
        Elixir.Chunky.Sequence.OEIS.Primes - 1 sequences
        Elixir.Chunky.Sequence.OEIS.Sigma - 20 sequences
Sequence Groups
        OEIS Core Sequences - 25 / 177 (14.12%)
```

### Enhancements

 - Chunky.Math
  - jordan_totient/2 - Jordan totient `J-k(n)`
  - mobius_function/1 - Classical mobius function
  - omega/1 - Count of distinct prime factors
  - bigomega/1 - Count of distinct prime factors, with multiplicity
  - greatest_prime_factor/1 - largest prime factor of `n`
  - least_prime_factor/1 - smallest prime factor of `n`
  - tau/1 - Tau function, number of divisors of `n`
  - is_squarefree?/1 - Are any factors of `n` perfect squares?
  - is_cubefree?/1 - Are any factors of `n` perfect cubes?
  - radical/1 - Square-free kernel, or `rad(n)` - product of distict prime factors
  - prime_factor_exponents/1 - Find the exponents of all prime factors of `n`
  - is_power_of?/2 - Is `n` a power of `m`?
  - is_sphenic_number?/1 - Is `n` the product of three distinct primes?
  
### New Sequences

 - A007434 - Jordan-2 totient `J_2(n)`
 - A059376 - Jordan function J_3(n)
 - A059377 - Jordan function J_4(n)
 - A059378 - Jordan function J_5(n)
 - A065958 - a(n) = n^2*Product_{distinct primes p dividing n} (1+1/p^2)
 - A065959 - a(n) = n^3*Product_{distinct primes p dividing n} (1+1/p^3)
 - A065960 - a(n) = n^4*Product_{distinct primes p dividing n} (1+1/p^4)
 - A069091 - Jordan function J_6(n)